dev/dev-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  selector:
    matchLabels:
      app: app1
  replicas: 1 # tells deployment to run 1 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: wil42/playground:v1
        ports:
        - containerPort: 8888
