dev/dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traf-ingress
  # annotations:
  #   traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  # - host: app1.com
  - http:
    paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2
            port:
              number: 8888
